--- a/src/Components/Services/ServiceDetails/ServiceDetails.css
+++ b/src/Components/Services/ServiceDetails/ServiceDetails.css
@@ -103,15 +103,40 @@
     font-size: 16px;
     font-weight: 600;
     font-weight: 500;
-    padding: 15px 50px 15px 20px;
+    padding: 15px 20px 15px 20px;
     position: relative;
     text-transform: capitalize;
     transition: all .5s;
     z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 .service-menu li.active a,
 .service-menu li:hover a {
     background-color: #f17732;
+}
+.service-menu li:hover a i{
+    color: #f17732;
+}
+.service-menu li  a i {
+    color: var(--btn-color);
+    background: #fff;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 900;
+    border-radius: 5px;
+    transition: .3s;
+    -webkit-transition: .3s;
+    -moz-transition: .3s;
+    -ms-transition: .3s;
+    -o-transition: .3s;
+}
+.service-menu li.active a i {
+    color: var(--orange-color);
 }
 .brochure-bx .title-head {
     border-bottom: 1px solid rgba(0,0,0,.15);
